--- a/index.css
+++ b/index.css
@@ -1,3 +1,10 @@
-@tailwind base;
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600&display=swap');@tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  html {
+    font-family: 'Comfortaa', sans-serif;
+    color: #564f4d
+  }
+}
